# baobab-mtg-products

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 000_dev_constraints.md  001_specifications.md  002_product_reference_instance_persistence_guidance.md  RELEASE.md  dev_diary.md
docs/features/: 00_project_bootstrap.md  01_product_reference_model.md  02_registration_and_scan_workflow.md  03_parent_child_relationships.md  04_opening_and_card_traceability.md  05_history_and_event_log.md  06_integration_ports_collection_statistics.md  07_query_services_and_public_api.md  08_release_readiness.md  09_product_reference_instance_split.md  10_physical_instance_creation_and_production_code.md  11_commercial_and_internal_scan_workflow_refactor.md  12_container_deconditioning_workflow.md  13_persistence_contracts_database_insertion.md
docs/security_reviews/: 09_product_reference_instance_split_security_review.md
docs/test_plans/: 09_product_reference_instance_split_test_plan.md  11_commercial_and_internal_scan_workflow_refactor_test_plan.md  12_container_deconditioning_test_tickets.md  12_container_deconditioning_workflow_test_plan.md  13_persistence_contracts_database_insertion_test_plan.md
docs/tests/coverage/: README.md
src/baobab_mtg_products/: __init__.py
src/baobab_mtg_products/domain/: __init__.py  entity.py
src/baobab_mtg_products/domain/deconditioning/: __init__.py  decondition_child_specification.py  decondition_container_command.py  decondition_container_result.py  deconditionable_container_policy.py
src/baobab_mtg_products/domain/history/: __init__.py  in_memory_product_business_event_ledger.py  product_business_event_kind.py  product_business_event_payload.py  product_business_event_record.py
src/baobab_mtg_products/domain/integration/: __init__.py  card_revealed_statistics_event.py  opening_card_scan_statistics_event.py  product_parent_link_for_collection_event.py  product_provenance_for_collection.py  sealed_product_opened_statistics_event.py
src/baobab_mtg_products/domain/opening/: __init__.py  external_card_id.py  open_sealed_product_outcome.py  opened_product_card_trace_rules.py  opening_card_scan_payload.py  product_opening_event.py  revealed_card_trace.py  sealed_product_opening_rules.py
src/baobab_mtg_products/domain/products/: __init__.py  commercial_barcode.py  internal_barcode.py  internal_product_id.py  mtg_set_code.py  product_instance.py  product_reference.py  product_reference_id.py  product_status.py  product_type.py  production_code.py  serial_number.py
src/baobab_mtg_products/domain/query/: __init__.py  product_structural_view.py  sealed_product_snapshot.py
src/baobab_mtg_products/domain/registration/: __init__.py  commercial_reference_resolution_result.py  registration_defaults.py  registration_scan_outcome.py  registration_scan_result.py  resolved_from_scan.py
src/baobab_mtg_products/exceptions/: __init__.py  baobab_mtg_products_exception.py
src/baobab_mtg_products/exceptions/deconditioning/: __init__.py  container_already_deconditioned_error.py  decondition_container_empty_children_error.py  invalid_decondition_child_specification_error.py  product_not_deconditionable_container_error.py
src/baobab_mtg_products/exceptions/history/: __init__.py  product_history_coherence_error.py
src/baobab_mtg_products/exceptions/integration/: __init__.py  invalid_integration_payload_error.py
src/baobab_mtg_products/exceptions/opening/: __init__.py  duplicate_revealed_card_trace_error.py  invalid_external_card_id_error.py  invalid_opening_card_scan_payload_error.py  invalid_revealed_card_sequence_error.py  product_already_opened_error.py  product_not_openable_error.py  product_not_opened_for_card_trace_error.py  product_not_ready_for_opening_error.py
src/baobab_mtg_products/exceptions/product/: __init__.py  duplicate_internal_barcode_error.py  invalid_commercial_barcode_error.py  invalid_internal_barcode_error.py  invalid_product_identifier_error.py  invalid_product_instance_error.py  invalid_product_reference_error.py  invalid_product_reference_id_error.py  invalid_production_code_error.py  invalid_serial_number_error.py  invalid_set_code_error.py
src/baobab_mtg_products/exceptions/query/: __init__.py  missing_referenced_parent_product_error.py  product_not_found_for_query_error.py  product_reference_not_found_for_query_error.py
src/baobab_mtg_products/exceptions/registration/: __init__.py  ambiguous_barcode_resolution_error.py  invalid_qualification_state_error.py  missing_product_ref_workflow_error.py  product_not_found_for_workflow_error.py
src/baobab_mtg_products/exceptions/relationship/: __init__.py  child_product_not_attached_error.py  circular_product_parentage_error.py  detach_parent_mismatch_error.py  incompatible_parent_child_types_error.py  incomplete_product_hierarchy_error.py  (+2 more)
src/baobab_mtg_products/ports/: __init__.py  barcode_resolution_port.py  collection_port.py  internal_product_id_factory_port.py  product_business_history_query_port.py  product_reference_id_factory_port.py  product_reference_repository_port.py  product_repository_port.py  product_workflow_event_recorder_port.py  revealed_card_trace_repository_port.py  statistics_port.py
src/baobab_mtg_products/services/: __init__.py
src/baobab_mtg_products/use_cases/: __init__.py  use_case.py
tests/: __init__.py
tests/baobab_mtg_products/: test_init.py
tests/baobab_mtg_products/domain/: test_entity.py
tests/baobab_mtg_products/exceptions/: test_baobab_mtg_products_exception.py
tests/baobab_mtg_products/ports/: test_collection_port.py  test_persistence_memory_workflows.py  test_product_reference_repository_port.py  test_product_repository_port.py  test_statistics_port.py
tests/baobab_mtg_products/services/: __init__.py
tests/baobab_mtg_products/use_cases/: test_use_case.py
tests/baobab_mtg_products/workflows/: __init__.py
tests/support/: __init__.py  in_memory_product_repositories.py
(+101 files in other folders)
